syntax = "proto2";

package cn.v5cn.netty.im.protobuf.generate;
option java_outer_classname = "Ack";

message AckMsg {
  // 协议版本号，第一个版本：1，以此类推。
  required int32 version = 1;
  // 消息id
  required int64 id = 2;
  //接受者类型
  required DestType destType = 3;
  // 发送者userId
  required string fromId = 4;
  // 接收者userId
  required string destId = 5;
  // 发送时间
  required int64 createTime = 6;
  // 消息类型
  required MsgType msgType = 7;
  // 消息体
  required int64 ackMsgId = 8;

  enum DestType {
    SINGLE = 0;
    GROUP = 1;
  }

  enum MsgType {
    DELIVERED = 0;
    READ = 1;
  }
}