syntax = "proto2";

package cn.v5cn.netty.im.protobuf.generate;
option java_outer_classname = "Internal";

message InternalMsg {
  //协议版本号。第一版本：1，以此类推。
  required int32 version = 1;
  //消息id
  required int64 id = 2;
  //发送模块
  required Module from = 3;
  //接收模块
  required Module dest = 4;
  //发送时间
  required int64 createTime = 5;
  //消息类型
  required MsgType msgType = 6;
  //消息体
  optional string msgBody = 7;

  enum Module {
    CONNECTOR = 0;
    TRANSFER = 1;
    CLIENT = 2;
  }

  enum MsgType {
    GREET = 0;
    ACK = 1;
    ERROR = 2;
  }
}